--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="./css/mobile.css"
+    />
     <title>Forest</title>
   </head>
   <body>
@@ -14,7 +19,7 @@
           <ul id="list">
             <li id="item-list"><a href="#main">Start</a></li>
             <li id="item-list"><a href="#about-us">About</a></li>
-            <li id="item-list"><a href="">Contact</a></li>
+            <li id="item-list"><a href="#">Contact</a></li>
           </ul>
         </div>
       </nav>
