--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum
           eos vitae ducimus ipsum natus eligendi.
         </p>
-        <button id="moreinfo">More Info</button>
+        <button class="btn" id="moreinfo">More Info</button>
       </div>
     </section>
 
@@ -61,25 +61,24 @@
           <i class="fa-solid fa-chevron-right"></i>
         </div>
       </div>
-
-      <div id="more">
-        <div id="info">
-          <h2>Lorem, ipsum dolor.</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Praesentium harum voluptatem reprehenderit iste at sapiente iusto
-            accusamus modi voluptatibus maxime magnam neque facere molestias
-            sint incidunt, placeat beatae nihil earum nemo sequi, quam
-            inventore? Molestiae dignissimos perspiciatis in eum cumque
-            mollitia. Nostrum, molestias? Autem officia explicabo nulla fugiat
-            iste exercitationem at voluptates cumque! Expedita qui quam ut nobis
-            quos eveniet?
-          </p>
-        </div>
-      </div>
     </section>
 
+    <div id="more">
+      <div id="info">
+        <h2>Lorem, ipsum dolor.</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium
+          harum voluptatem reprehenderit iste at sapiente iusto accusamus modi
+          voluptatibus maxime magnam neque facere molestias sint incidunt,
+          placeat beatae nihil earum nemo sequi, quam inventore? Molestiae
+          dignissimos perspiciatis in eum cumque mollitia. Nostrum, molestias?
+          Autem officia explicabo nulla fugiat iste exercitationem at voluptates
+          cumque! Expedita qui quam ut nobis quos eveniet?
+        </p>
+      </div>
+    </div>
     <script src="script/script.js"></script>
+
     <script
       src="https://kit.fontawesome.com/7c438bf88c.js"
       crossorigin="anonymous"
