--- a/index.html
+++ b/index.html
@@ -63,20 +63,24 @@
       </div>
     </section>
 
-    <div id="more">
-      <div id="info">
-        <h2>Lorem, ipsum dolor.</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium
-          harum voluptatem reprehenderit iste at sapiente iusto accusamus modi
-          voluptatibus maxime magnam neque facere molestias sint incidunt,
-          placeat beatae nihil earum nemo sequi, quam inventore? Molestiae
-          dignissimos perspiciatis in eum cumque mollitia. Nostrum, molestias?
-          Autem officia explicabo nulla fugiat iste exercitationem at voluptates
-          cumque! Expedita qui quam ut nobis quos eveniet?
-        </p>
+    <section id="more">
+      <div id="more-container">
+        <div id="info">
+          <h2>Lorem, ipsum dolor.</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Praesentium harum voluptatem reprehenderit iste at sapiente iusto
+            accusamus modi voluptatibus maxime magnam neque facere molestias
+            sint incidunt, placeat beatae nihil earum nemo sequi, quam
+            inventore? Molestiae dignissimos perspiciatis in eum cumque
+            mollitia. Nostrum, molestias? Autem officia explicabo nulla fugiat
+            iste exercitationem at voluptates cumque! Expedita qui quam ut nobis
+            quos eveniet?
+          </p>
+        </div>
       </div>
-    </div>
+    </section>
+
     <script src="script/script.js"></script>
 
     <script
