--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       media="screen and (max-width: 768px)"
       href="./css/mobile.css"
     />
+    <link rel="icon" type="image/svg+xml" href="./img/tree_2786680.png" />
     <title>Forest</title>
   </head>
   <body>
@@ -19,7 +20,7 @@
           <ul id="list">
             <li id="item-list"><a href="#main">Start</a></li>
             <li id="item-list"><a href="#about-us">About</a></li>
-            <li id="item-list"><a href="#">Contact</a></li>
+            <li id="item-list"><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -81,8 +82,30 @@
       </div>
     </section>
 
-    <script src="script/script.js"></script>
+    <section>
+      <footer>
+        <div id="icon-div"><i id="icon" class="fa-solid fa-leaf"></i></div>
+        <div id="contact">
+          <li class="contact-list-item" id="item-1">
+            <i class="fa-brands fa-instagram"></i>
+            <a href="">Instagram</a>
+          </li>
+          <li class="contact-list-item" id="item-2">
+            <a href=""> <i class="fa-brands fa-facebook"></i>Facebook</a>
+          </li>
+          <li class="contact-list-item" id="item-3">
+            <a href=""><i class="fa-brands fa-twitter"></i>Twitter</a>
+          </li>
+          <li class="contact-list-item" id="item-4"><a href="">Lorem</a></li>
+          <li class="contact-list-item" id="item-5"><a href="">Ipsum</a></li>
+          <li class="contact-list-item" id="item-6"><a href="">Dolor</a></li>
+        </div>
+      </footer>
+    </section>
 
+    <div class="copyright"><h3>Copyright 2025. All rights reserved.</h3></div>
+
+    <script src="script/script.js"></script>
     <script
       src="https://kit.fontawesome.com/7c438bf88c.js"
       crossorigin="anonymous"
